
.. contents:: List of Releases
   :depth: 1

bzr 2.2.0b1 (not released yet)
##############################

:Codename: ???
:2.2.0b1: ???

Compatibility Breaks
********************

* ``Repository.get_inventory_sha1()`` has been removed. (Jelmer Vernooij)

New Features
************

Bug Fixes
*********

* Fix "AttributeError in Inter1and2Helper" during fetch.
  (Martin Pool, #513432)

Improvements
************

Documentation
*************

API Changes
***********

* ``Repository.deserialise_inventory`` has been renamed to 
  ``Repository._deserialise_inventory`` to indicate it is private.
  (Jelmer Vernooij)

* ``Repository.get_inventory_xml`` has been renamed to 
  ``Repository._get_inventory_xml`` to indicate it is private. 
  (Jelmer Vernooij)

* ``Repository.serialise_inventory`` has been renamed to 
  ``Repository._serialise_inventory`` to indicate it is private.

Internals
*********

Testing
*******


bzr 2.1.0rc2
############

:Codename: after the bubbles
:2.1.0rc2: 2010-01-29

This is a quick-turn-around to update a small issue with our new per-file
merge hook. We expect no major changes from this to the final 2.1.0.

API Changes
***********

* The new ``merge_file_content`` hook point has been altered to provide a
  better API where state for extensions can be stored rather than the
  too-simple function based approach. This fixes a performance regression
  where branch configuration would be parsed per-file during merge. As
  part of this the included news_merger has been refactored into a base
  helper class ``bzrlib.merge.ConfigurableFileMerger``.
  (Robert Collins, John Arbash Meinel, #513822)


bzr 2.1.0rc1
############

:Codename: the 'new' stable
:2.1.0rc1: 2009-01-21

This is the first stable release candidate for Bazaar's 2.1 series. From
this point onwards, the 2.1 series will be considered stable (as the 2.0
series) and only bugfixes are expected to be incorporated. The dozen or so