@@ -1,4 +1,4 @@
-# Copyright (C) 2009 Canonical Ltd
+# Copyright (C) 2009-2010 Canonical Ltd
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
 import os
-
+import time
 
 from bzrlib import (
     errors,
@@ -62,3 +62,30 @@ class TestExport(tests.TestCaseWithTransport):
         wt.commit('1')
         self.build_tree(['target/', 'target/foo'])
         self.assertRaises(errors.BzrError, export.export, wt, 'target', format="dir")
+
+    def test_dir_export_files_same_timestamp(self):
+        builder = self.make_branch_builder('source')
+        builder.start_series()
+        builder.build_snapshot(None, None, [
+            ('add', ('', 'root-id', 'directory', '')),
+            ('add', ('a', 'a-id', 'file', 'content\n'))])
+        builder.build_snapshot(None, None, [
+            ('add', ('b', 'b-id', 'file', 'content\n'))])
+        builder.finish_series()
+        b = builder.get_branch()
+        b.lock_read()
+        self.addCleanup(b.unlock)
+        tree = b.basis_tree()
+        orig_iter_files_bytes = tree.iter_files_bytes
+        # Make iter_files_bytes slower, so we provoke mtime skew
+        def iter_files_bytes(to_fetch):
+            for thing in orig_iter_files_bytes(to_fetch):
+                yield thing
+                time.sleep(1)
+        tree.iter_files_bytes = iter_files_bytes
+        export.export(tree, 'target', format='dir')
+        t = self.get_transport('target')
+        st_a = t.stat('a')
+        st_b = t.stat('b')
+        # All files must be given the same mtime.
+        self.assertEqual(st_a.st_mtime, st_b.st_mtime)
